[project]
name = "intrests-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb==0.4.24",
    "fastapi==0.112.2",
    "flake8==7.1.1",
    "httpx==0.28.1",
    "numpy<2.0",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "uvicorn[standard]==0.30.6",
]
